--- a/recipes/spacepy/meta.yaml
+++ b/recipes/spacepy/meta.yaml
@@ -6,25 +6,9 @@ source:
   fn: spacepy-0.1.6.tar.gz
   url: https://pypi.python.org/packages/f7/10/4a9a43014d25c1ce08aad136da2515eb120a26105dec5e8f42b5986c22a3/spacepy-0.1.6.tar.gz
   md5: 1272ec6537ca45b6e4b8ea3f8c2cf8a1
-#  patches:
-   # List any patch files here
-   # - fix.patch
 
-# build:
-  # noarch_python: True
-  # preserve_egg_dir: True
-  # entry_points:
-    # Put any entry points (scripts to be generated automatically) here. The
-    # syntax is module:function.  For example
-    #
-    # - spacepy = spacepy:main
-    #
-    # Would create an entry point called spacepy that calls spacepy.main()
-
-
-  # If this is a new build for the same version, increment the build
-  # number. If you do not include this key, it defaults to 0.
-  # number: 1
+build:
+  number: 0
 
 requirements:
   build:
@@ -39,7 +23,6 @@ requirements:
     - h5py
 
 test:
-  # Python imports
   imports:
     - spacepy
     - spacepy.irbempy
@@ -48,23 +31,11 @@ test:
     - spacepy.pycdf
     - spacepy.toolbox
 
-  # commands:
-    # You can put test commands to be run here.  Use this to test that the
-    # entry points work.
-
-
-  # You can also put a file called run_test.py in the recipe that will be run
-  # at test time.
-
-  # requires:
-    # Put any additional test requirements here.  For example
-    # - nose
-
 about:
   home: http://spacepy.lanl.gov
   license: Python Software Foundation License
   summary: 'SpacePy: Tools for Space Science Applications'
 
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
+extra:
+  recipe-maintainers:
+    - AlexS12
