Added gfortran dependency

--- a/recipes/spacepy/meta.yaml
+++ b/recipes/spacepy/meta.yaml
@@ -14,6 +14,7 @@ requirements:
   build:
     - python
     - numpy
+    - gfortran
 
   run:
     - python
@@ -22,6 +23,7 @@ requirements:
     - matplotlib
     - python_dateutil
     - h5py
+    - libgfortran
 
 test:
   imports:
