python-dateutil instead of python_dateutil

--- a/recipes/spacepy/meta.yaml
+++ b/recipes/spacepy/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - numpy
     - scipy
     - matplotlib
-    - python_dateutil
+    - python-dateutil
     - h5py
     - libgfortran
 
