--- a/recipes/spacepy/meta.yaml
+++ b/recipes/spacepy/meta.yaml
@@ -9,12 +9,16 @@ source:
 
 build:
   number: 0
+  features:
+    - vc9      [win and py27]
+    - vc10     [win and py34]
+    - vc14     [win and py35]
 
 requirements:
   build:
     - python
     - numpy
-    - gcc
+    - gcc      [not win]
 
   run:
     - python
@@ -23,7 +27,7 @@ requirements:
     - matplotlib
     - python-dateutil
     - h5py
-    - libgfortran
+    - libgfortran   [not win]
 
 test:
   imports:
