--- a/recipes/spacepy/meta.yaml
+++ b/recipes/spacepy/meta.yaml
@@ -19,6 +19,8 @@ requirements:
     - python
     - numpy
     - gcc      [not win]
+    - m2w64-gcc-fortran [win]
+    - toolchain
 
   run:
     - python
@@ -29,6 +31,7 @@ requirements:
     - h5py
     - libgfortran   [not win]
     - libgcc        [not win]
+    - m2w64-gcc-libgfortran [win]
 
 test:
   imports:
